Multiple fixes - Search/Attachments/Registration Part 01
- Fixes layout for Search for patient
- Fixes Open button on Attachements
- Fixes registration layout issues.

--- a/omod/src/main/webapp/resources/styles/buttons.css
+++ b/omod/src/main/webapp/resources/styles/buttons.css
@@ -2,6 +2,7 @@
 .button.app.big {
     padding: 24px;
     height: 96%;
+    color: #424C55;
 }
 
 .button.app.big:hover {
@@ -194,7 +195,7 @@ input[type="submit"]:disabled:hover {
     content: 'Clear';
 }
 
-.edit-action::after {
+.edit-action.icon-share-alt:after {
     content: 'Open';
 }
 
@@ -239,7 +240,9 @@ a.button:hover,
 .delete-item,
 .delete-item:hover,
 #patient-search-results #patient-search-results-table tbody tr:hover, 
-#patient-search-results #patient-search-results-table tbody tr {
+#patient-search-results #patient-search-results-table tbody tr,
+.dashboard .info-header i.edit-action,
+.dashboard .info-header i.edit-action:hover {
     -webkit-transition-property: all;
     transition-property: all;
     -webkit-transition-duration: .35s;
